<resources>
    <string name="app_name">Apna Vyapar</string>
    <string name="title_activity_b2_blogin">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_b2_bregister">Register</string>
    <string name="title_activity_b2_bdashboard">Menu</string>
    <string name="reg1"> \tFull Name</string>
    <string name="reg2"> \tUsername</string>
    <string name="reg2a"> \tCompany</string>
    <string name="reg3"> \tPrimary Email</string>
    <string name="reg3a"> \tSecondary Email</string>
    <string name="reg4"> \tPrimary Mobile</string>
    <string name="reg4a"> \tSecondary Mobile</string>
    <string name="reg5"> \tAddress</string>
    <string name="reg6"> \tReference</string>
    <string name="reg7"> \tPassword</string>
    <string name="reg8"> \tConfirm Password</string>
    <string name="reg9"> Sign Up</string>
    <string name="reg10"> \tCity</string>
    <string name="reg11"> \tState</string>
    <string name="edt"> Update</string>
    <string name="title_activity_verify">Verification</string>
    <string name="pdt_tab1">Products</string>
    <string name="pdt_tab2">Add New</string>
    <string name="p_tab1">Find</string>
    <string name="p_tab2">Partner</string>
    <string name="p_tab3">Pending</string>
    <string name="p_tab4">Sent</string>
    <string name="py_tab1">Sent</string>
    <string name="py_tab3">Received</string>
    <string name="py_tab2">Send New</string>
    <string name="po_tab1">Sent</string>
    <string name="po_tab2">Received</string>
    <string name="o_tab0">Direct</string>
    <string name="o_tab1">Orders</string>
    <string name="o_tab2">Sent</string>
    <string name="o_tab3">Pending</string>
    <string name="o_tab4">Ignored</string>
    <string name="q_tab1">Quotations</string>
    <string name="q_tab2">Received</string>
    <string name="q_tab3">Asked</string>
    <string name="cat_tab1">Categories</string>
    <string name="cat_tab2">Specifications</string>
    <string name="sub_tab1">SUB USERS</string>
    <string name="sub_tab2">Add New</string>
    <string-array name="notoptions">
        <item>All</item>
        <item>Orders</item>
        <item>Quotations</item>
        <item>Messages</item>
        <item>Payments</item>
        <item>Partners</item>
        <item>Collection</item>
        <item>Groups</item>
        <item>Info/promo</item>
        <item>Expired</item>
    </string-array>
    <string-array name="nav_drawer_items">
        <item>MY PROFILE</item>
        <item>DASHBOARD</item>
        <item>FIND PARTNERS</item>
        <item>CREATE ORDER</item>
        <item>SEND PAYMENT</item>
        <item>MESSAGES</item>
        <item>PRODUCTS</item>
        <item>BACKUP</item>
    </string-array>
    <string-array name="amt">
        <item>Cheque</item>
        <item>Cash</item>
    </string-array>
    <string-array name="per">
        <item>None</item>
        <item>All</item>
    </string-array>
    <string-array name="states">
        <item>Punjab</item>
        <item>Uttar Pradesh</item>
        <item>Maharashtra</item>
        <item>Bihar</item>
        <item>West Bengal</item>
        <item>Madhya Pradesh</item>
        <item>Tamil Nadu</item>
        <item>Rajasthan</item>
        <item>Karnataka</item>
        <item>Gujarat</item>
        <item>Andhra Pradesh</item>
        <item>Odisha</item>
        <item>Telangana</item>
        <item>Kerala</item>
        <item>Jharkhand</item>
        <item>Assam</item>
        <item>Chhattisgarh</item>
        <item>Haryana</item>
        <item>Jammu and Kashmir</item>
        <item>Uttarakhand</item>
        <item>Himachal Pradesh</item>
        <item>Tripura</item>
        <item>Meghalaya</item>
        <item>Manipur</item>
        <item>Nagaland</item>
        <item>Goa</item>
        <item>Arunachal Pradesh</item>
        <item>Mizoram</item>
        <item>Sikkim</item>
        <item>Delhi</item>
        <item>Puducherry</item>
        <item>Chandigarh</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Lakshadweep</item>
    </string-array>
    <string-array name="countries">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei </item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burma</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo, Democratic Republic of the</item>
        <item>Congo, Republic of the</item>
        <item>Costa Rica</item>
        <item>Cote d`Ivoire</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Curacao</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>East Timor</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Holy See</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Korea, North</item>
        <item>Korea, South</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>Netherlands Antilles</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Korea</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestinian Territories</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines
<item>Samoa </item><item>San Marino</item><item>Sao Tome and Principe</item><item>Saudi Arabia</item><item>Senegal</item><item>Serbia</item><item>Seychelles</item><item>Sierra Leone</item><item>Singapore</item><item>Sint Maarten</item><item>Slovakia</item><item>Slovenia</item><item>Solomon Islands</item><item>Somalia</item><item>South Africa</item><item>South Korea</item><item>South Sudan</item><item>Spain</item><item>Sri Lanka</item><item>Sudan</item><item>Suriname</item><item>Swaziland </item><item>Sweden</item><item>Switzerland</item><item>Syria</item><item>Taiwan</item><item>Tajikistan</item><item>Tanzania</item><item>Thailand</item><item>Timor-Leste</item><item>Togo</item><item>Tonga</item><item>Trinidad and Tobago</item><item>Tunisia</item><item>Turkey</item><item>Turkmenistan</item><item>Tuvalu</item><item>Uganda</item><item>Ukraine</item><item>United Arab Emirates</item><item>United Kingdom</item><item>Uruguay</item><item>Uzbekistan</item><item>Vanuatu</item><item>Venezuela</item><item>Vietnam</item><item>Yemen</item><item>Zambia</item><item>Zimbabwe</item></item>
    </string-array>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_add_category">Categories</string>
    <string name="title_activity_edit_profile">My Profile</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_profile_pic">Edit Profile Pic</string>
    <string name="title_activity_image_selector">ImageSelector</string>
    <string name="title_activity_partners">Partners</string>
    <string name="title_activity_profile_details">Profile Details</string>
    <string name="title_activity_orders">Orders</string>
    <string name="title_activity_order_details">Order Details</string>
    <string name="title_activity_accept_order">Confirm</string>
    <string name="title_activity_new_order">New Order</string>
    <string name="title_activity_conversations">Conversations</string>
    <string name="title_activity_messages">Messages</string>
    <string name="title_activity_select_user">SelectUser</string>
    <string name="title_activity_add_product">Add Product</string>
    <string name="title_activity_send_payment">Send Payment</string>
    <string name="title_activity_send_quotation">Send Quotation</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_dispatch_details">DispatchDetails</string>
    <string name="order_price">Order Price</string>
    <string name="title_activity_quotations">Quotations</string>
    <string name="title_activity_db_back_up">Backup Data</string>
    <string name="title_activity_quote_details">QuoteDetails</string>
    <string name="title_activity_add_user_to_group">Add Users To Group</string>
</resources>