<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent" 
  android:background="#eee">


<TabHost 
android:id="@android:id/tabhost"
android:layout_width="fill_parent"
android:layout_height="fill_parent">
<LinearLayout
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent">
<TabWidget
android:id="@android:id/tabs"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:layout_marginBottom="6sp"
android:background="#FFFFFF">
<TextView
android:tag="tab0"
android:text="@string/o_tab1"
android:layout_width="wrap_content"
android:layout_height="fill_parent"/>
<TextView
android:tag="tab1"
android:text="@string/o_tab2"
android:layout_width="wrap_content"
android:layout_height="fill_parent"/>
<TextView
android:tag="tab2"
android:text="@string/o_tab3"
android:layout_width="wrap_content"
android:layout_height="fill_parent"/>

<TextView
android:tag="tab3"
android:text="@string/o_tab4"
android:layout_width="wrap_content"
android:layout_height="fill_parent"/>

</TabWidget>
<FrameLayout
android:id="@android:id/tabcontent"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
>


    
       <ListView
        android:id="@+id/accept"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:listSelector="@drawable/list_selector1" 
        android:divider="#EEE"
        android:dividerHeight="3dp"
        android:layout_margin="3sp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp" 
        />
    
    

  
     
    
       <ListView
        android:id="@+id/sent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:listSelector="@drawable/list_selector1" 
        android:divider="#EEE"
        android:dividerHeight="3dp"
        android:layout_margin="3sp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp" 
        />
    
    
    
       <ListView
        android:id="@+id/o_pending"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:listSelector="@drawable/list_selector1" 
        android:divider="#EEE"
        android:dividerHeight="3dp"
        android:layout_margin="3sp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp" 
        />
    
      
       <ListView
        android:id="@+id/o_ignored"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:listSelector="@drawable/list_selector1" 
        android:divider="#EEE"
        android:dividerHeight="3dp"
        android:layout_margin="3sp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp" 
        />

 <TextView
     android:id="@+id/cid"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="" 
     android:visibility="gone"
     />
 <TextView
     android:id="@+id/oid"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="" 
     android:visibility="gone"
     />
 <TextView
     android:id="@+id/tp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="" 
     android:visibility="gone"
     />
</FrameLayout>
</LinearLayout>
</TabHost> 
    <!-- Footer aligned to bottom -->

    
</RelativeLayout>